add support for reading idps from xml file
* add idps_sources endpoint: it corresponds to a URL pointing to a XML
  file with IDP metadata
* add HttpGetter class to wrap GET/POST requests with curl (and make
  Bloxberg TS code use it
* fix bloxberg TS that was not  working in the first place, too
* improve IDP class by adding a create private function and constants
  for default params
* add Xml2Idps class to convert a XML DOMDocument to a list of IDPs
* add search bar in IDP dropdown on login page

--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -181,6 +181,9 @@
         <input type='hidden' name='auth_type' value='saml'>
         {{ App.Session.get('csrf')|csrf }}
         <div class='form-group col-md-4 mx-auto'>
+          {% if App.Config.configArr.debug -%}
+            <!-- [html-validate-disable-block input-missing-label, prefer-native-element: suppress errors from tom-select] -->
+          {%- endif %}
           <label for='idp_login_select'>{{ 'Select an identity provider'|trans }}</label>
           <select name='idpId' class='form-control' id='idp_login_select'>
             {% for idp in idpsArr %}
