--- a/src/templates/idp-modal.html
+++ b/src/templates/idp-modal.html
@@ -104,7 +104,7 @@
       </div>
       <div class='modal-footer'>
         <button type='button' class='btn btn-ghost' data-dismiss='modal'>{{ 'Cancel'|trans }}</button>
-        <button type='button' data-action='save-idp' id='idpModalSaveButton' data-dismiss='modal' class='btn btn-primary'>{{ 'Save'|trans }}</button>
+        <button type='submit' data-action='save-idp' id='idpModalSaveButton' data-dismiss='modal' class='btn btn-primary'>{{ 'Save'|trans }}</button>
       </div>
     </div>
   </div>
