try disable no-missing-references for ldap_password if password is set

--- a/src/templates/sysconfig.html
+++ b/src/templates/sysconfig.html
@@ -854,6 +854,7 @@
     <hr>
 
     <div class='d-flex justify-content-between'>
+      <!-- [html-validate-disable no-missing-references: if there is an ldap_password, the input is not shown] -->
       <label for='ldap_password' class='col-form-label'>LDAP {{ 'Password'|trans }}</label>
       {% if App.Config.configArr.ldap_password|length == 0 %}
         <div class='input-group col-md-3 p-0'>
